samples/_failures_safe/1761076274_1522ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32209691.c: In function ‘main’:
./samples/SAFE/__tmp_32209691.c:156:9: error: expected expression at end of input
  156 |         if (edges[i].u < 0 || edges[i].u >= n || edges[i].v < 0 || edges[i].v >=
      |         ^~
./samples/SAFE/__tmp_32209691.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_32209691.c:156:9: error: expected declaration or statement at end of input
